@@ -1,3 +1,11 @@
+2007-10-16 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b110
+
+ * Change: Removed some white background in treefolder images.
+
+ * Fix: fitToWindow was still not working 100%.
+
+ * Fix: Little HTML fix.
+
 2007-10-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b109
 
  * Fix: Subalbum-tree did not work when subalbum name started with a number.
